Fix IntelliJ warnings in ImportExecutorTest
Fixed resource leak warnings by wrapping Files.lines() calls in
try-with-resources blocks:
- Line 159: Files.lines(patientFile).count()
- Line 178: Files.lines(patientFile2).count()
- Line 572: Files.lines(observationFile).count()

Fixed assertion warning by testing list emptiness before calling
allMatch predicate (line 328).